# sekhmet

./: .clang-format  .gitignore  .gitmodules  CMakeLists.flags.txt  CMakeLists.include.txt  CMakeLists.macros.txt  CMakeLists.options.txt  CMakeLists.txt  Doxyfile  LICENSE  README.md  console-notes.md  console-notes.txt  main_loop.md  main_loop_diagram  notes.md  prefab-level-scene.md  prefab-level-scene.txt  spec.md  todo.md  todo.txt
editor/: CMakeLists.txt
sekhmet/detail/: CMake.options.txt  CMakeLists.txt  access_guard.hpp  adapter.hpp  aligned_storage.hpp  alloc_util.hpp  any.hpp  arch.h  array_list.hpp  assert.hpp  asset_db.cpp  asset_db.hpp  asset_info.hpp  asset_stream.cpp  asset_stream.hpp  assets.cpp  assets.hpp  basic_dynarray.hpp  basic_hash_table.hpp  basic_object.hpp  basic_pool.hpp  basic_resource.hpp  basic_service.hpp  bswap.hpp  buffer_allocator.hpp  compound_exception.cpp  compound_exception.hpp  contiguous_iterator.hpp  define.h  delegate.hpp  delegate_error.cpp  dense_hash_table.hpp  dense_map.hpp  dense_set.hpp  dynamic_buffer_resource.hpp  dynarray.hpp  ebo_base_helper.hpp  engine_exception.hpp  event.hpp  event_proxy.hpp  (+66 more)
sekhmet/detail/adt/: CMakeLists.txt  archive.hpp  node.hpp  serialize_impl.hpp  toml_archive.cpp  toml_archive.hpp  ubj_archive.cpp  ubj_archive.hpp
sekhmet/detail/adt/ubj/: ubj_archive.cpp  ubj_archive.hpp  ubj_spec12_types.c  ubj_spec12_types.h
sekhmet/detail/gcc/: type_name.hpp
sekhmet/detail/msvc/: type_name.hpp
sekhmet/detail/type_info/: CMakeLists.txt  any.cpp  any.hpp  any_range.cpp  any_range.hpp  any_string.cpp  any_string.hpp  any_table.cpp  any_table.hpp  any_tuple.cpp  any_tuple.hpp  fwd.hpp  traits.hpp  type_data.cpp  type_data.hpp  type_db.cpp  type_db.hpp  type_error.cpp  type_error.hpp  type_factory.hpp  type_info.cpp  type_info.hpp
sekhmet/detail/unix/: filemap_handle.cpp  filemap_handle.hpp  native_file_handle.cpp  native_file_handle.hpp  native_util.hpp
sekhmet/detail/win/: filemap_handle.cpp  filemap_handle.hpp  native_util.hpp
sekhmet/math/: CMakeLists.txt  matrix.hpp  quaternion.hpp  random.hpp  ray.hpp  utility.hpp  vector.hpp
sekhmet/math/detail/: CMake.options.txt  CMakeLists.txt  config.h  macros.hpp  mask.hpp  matrix.hpp  matrix2x.hpp  matrix3x.hpp  matrix4x.hpp  matrix_macros.hpp  policy.hpp  quaternion.hpp  shuffle.hpp  simd.hpp  storage.hpp  sysrandom.cpp  sysrandom.hpp  util.hpp  vector.hpp  vector_data.hpp  vectorfwd.hpp  xoroshiro.hpp
sekhmet/math/detail/generic/: mask_impl.hpp  vector.hpp  vector_impl.hpp
sekhmet/math/detail/quaterion/: category.hpp  type.hpp
sekhmet/math/detail/quaternion/: category.hpp  fwd.hpp  geometric.hpp  relational.hpp  type.hpp
sekhmet/math/detail/vector/: fwd.hpp  shuffle.hpp  storage.hpp  type.hpp
sekhmet/math/detail/vector/func/: arithm.hpp  arithm_fwd.hpp  arithmetic.hpp  arithmetic_fwd.hpp  arithmetic_impl.hpp  bitwise.hpp  bitwise_fwd.hpp  bitwise_impl.hpp  cat.hpp  cat_fwd.hpp  category.hpp  category_impl.hpp  exp.hpp  exp_fwd.hpp  exponential.hpp  exponential_impl.hpp  geom.hpp  geom_fwd.hpp  geometric.hpp  geometric_fwd.hpp  geometric_impl.hpp  rel.hpp  rel_fwd.hpp  relational.hpp  relational_fwd.hpp  relational_impl.hpp  trig.hpp  trig_fwd.hpp  trigonometric.hpp  trigonometric_fwd.hpp  trigonometric_impl.hpp  util.hpp  util_fwd.hpp  util_impl.hpp  utility.hpp
sekhmet/math/detail/vector/func/fwd/: arithmetic.hpp  bitwise.hpp  category.hpp  exp.hpp  exponential.hpp  geom.hpp  geometric.hpp  relational.hpp  trig.hpp  trigonometric.hpp  util.hpp  utility.hpp
sekhmet/math/detail/vector/func/x86/: CMakeLists.txt  arithmetic.hpp  bitwise.hpp  cat.hpp  category.hpp  common.hpp  exp.hpp  exp_f32.cpp  exponential.cpp  exponential.hpp  geometric.hpp  rel.hpp  rel_f32.hpp  rel_f64.hpp  rel_i32.hpp  rel_i64.hpp  relational.hpp  trig.cpp  trig.hpp  trig_f32.cpp  trig_f64.cpp  trigonometric.cpp  trigonometric.hpp  util.cpp  util.hpp  util_f32.hpp  util_f64.hpp  util_i32.hpp  util_i64.hpp  utility.cpp  utility.hpp
sekhmet/math/detail/vector/func/x86/f32/: exponential.cpp  exponential.hpp  relational.hpp  trigonometric.cpp  trigonometric.hpp  utility.hpp
sekhmet/math/detail/vector/func/x86/f64/: exponential.cpp  exponential.hpp  relational.hpp  trigonometric.cpp  trigonometric.hpp  utility.hpp
sekhmet/math/detail/vector/func/x86/i32/: relational.hpp  utility.hpp
sekhmet/math/detail/vector/generic/: mask.hpp  vector.hpp
sekhmet/math/detail/vector/x86/: common.hpp  mask_double.hpp  mask_float.hpp  mask_int32.hpp  mask_int64.hpp  vector_double.hpp  vector_float.hpp  vector_int32.hpp  vector_int64.hpp
sekhmet/math/detail/x86/: CMake.options.txt  avx.hpp  common.hpp  mask_double.hpp  mask_float.hpp  mask_int32.hpp  mask_int64.hpp  simd_util.hpp  sse.hpp  vector_double.hpp  vector_float.hpp  vector_impl.hpp  vector_int32.hpp  vector_int64.hpp
sekhmet/serialization/: CMakeLists.txt  archive.hpp  base64.hpp  binary.hpp  json.hpp  json_archive.hpp  notes.md  scratch.md  types.hpp  ubjson.hpp
sekhmet/serialization/detail/: CMakeLists.txt  archive_error.cpp  archive_error.hpp  archive_reader.hpp  archive_traits.hpp  archive_writer.hpp  base64.hpp  binary_archive.hpp  manipulators.hpp  node_tree.hpp  ranges.hpp  serialization.hpp  traits.hpp  tuples.hpp  ubj_archive.hpp  util.hpp
sekhmet/serialization/detail/json/: CMakeLists.txt  common.hpp  fwd.hpp  json_archive.hpp  json_error.cpp  json_error.hpp  json_reader.hpp  object.cpp  object.hpp  type.hpp  ubj_archive.hpp  ubj_writer.hpp  value.cpp  value.hpp
sekhmet/serialization/detail/types/: ranges.hpp  traits.hpp  tuples.hpp
test/: CMakeLists.txt  adapter_tests.cpp  adt_tests.cpp  container_tests.cpp  debug_tests.cpp  ecs_tests.cpp  main.cpp  math_tests.cpp  plugin_tests.cpp  reflection_tests.cpp  runtime_tests.cpp  serialization_tests.cpp  test_archive.sekpak  test_plugin.cpp  test_plugin.hpp  utility_tests.cpp  zstd_test.cpp
test/test_fragment/: .manifest  test_asset_2.txt  test_asset_replaced.txt
test/test_package/: .manifest  test_asset.txt  test_asset2.txt  test_resource.ubj
(+164 files in other folders)
